--- a/main.tex
+++ b/main.tex
@@ -61,7 +61,7 @@ Email: \{abc, yxz,, aaa\}@yahoo.ac.uk \\
 \section{Introduction}
 
 % check which citation works for you
-%\citep{1}
+\citep{barbole_comparative_2023}
 %citet{2}
 
 
